--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Recursive:wght@600&display=swap');
-body , html {
+body,
+html {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -9,7 +10,7 @@ body , html {
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Montserrat', sans-serif !important;
   overflow-x: hidden !important;
-  background-color: #5a61e1 !important;
+  background-color: #f38f49 !important;
 }
 
 code {
@@ -17,13 +18,13 @@ code {
     monospace;
 }
 
-.nav-link{
-  color:black !important;
+.nav-link {
+  color: black !important;
 }
 
-.navbar-brand{
-  color:black !important;
-  font-size:xx-large;
+.navbar-brand {
+  color: black !important;
+  font-size: xx-large;
   text-transform: uppercase;
   background-image: linear-gradient(
     -225deg,
@@ -50,64 +51,66 @@ code {
   }
 }
 
-h1{
+h1 {
   font-size: 20px !important;
 }
-.flex-container{
+.flex-container {
   display: flex !important;
 }
-.btn{
-  background-color:red !important;
-  color:white !important;
+.btn {
+  background-color: red !important;
+  color: white !important;
   box-shadow: none !important;
 }
 
-select{
+select {
   box-shadow: none !important;
   border-color: black !important;
 }
 
-.fa-plus{
-  color:green ;
+.fa-plus {
+  color: green;
   margin: 5px;
 }
-.fa-minus{
-  color:red !important;
+.fa-minus {
+  color: red !important;
   margin: 5px;
 }
-.fa-trash{
-  color:red;
+.fa-trash {
+  color: red;
 }
-input{
+input {
   margin-top: 10px !important;
   box-shadow: none !important;
 }
-.adminfunctions{
+.adminfunctions {
   padding: 10px;
-  background-color:rgb(1, 1, 77);
+  background-color: rgb(1, 1, 77);
 }
 
-.adminfunctions li{
-  list-style-type: none !important; 
+.adminfunctions li {
+  list-style-type: none !important;
   display: inline !important;
   color: white !important;
 }
-.adminfunctions li a{
-   color: white !important;
-   padding: 20px;
+.adminfunctions li a {
+  color: white !important;
+  padding: 20px;
 }
-td , th , tr{
-  text-align:left;
+td,
+th,
+tr {
+  text-align: left;
 }
-.login{
+.login {
   background-image: url('./images//bg1.svg');
   background-repeat: no-repeat !important;
   background-size: cover !important;
-  height:90vh;
+  height: 90vh;
 }
-.register{
+.register {
   background-image: url('./images//bg2.svg');
   background-repeat: no-repeat !important;
   background-size: cover !important;
-  height:90vh;
+  height: 90vh;
 }
